--- a/index.html
+++ b/index.html
@@ -373,12 +373,12 @@
 
     const parties = [
       // 이미지 104218.jpg 우측 차트 데이터 기반, 줄임말 적용
-      { id: "nsdap", name: "NSDAP", color: "#8B0000", vote: 43.91, regionOnly: null }, // Nazi Party
+      { id: "nsdap", name: "NSDAP", color: "#6c3913", vote: 43.91, regionOnly: null }, // Nazi Party
       { id: "spd", name: "SPD", color: "#FF0000", vote: 18.25, regionOnly: null }, // Social Democratic Party
-      { id: "kpd", name: "KPD", color: "#000000", vote: 12.32, regionOnly: null }, // Communist Party
-      { id: "zentrum", name: "Zentrum", color: "#008000", vote: 11.25, regionOnly: null }, // Catholic Centre Party
-      { id: "dnvp", name: "DNVP", color: "#0000FF", vote: 8.34, regionOnly: null }, // German National People's Party
-      { id: "bvp", name: "BVP", color: "#800080", vote: 2.73, regionOnly: "bavaria" }, // Bavarian People's Party (바이에른 지역구 특화)
+      { id: "kpd", name: "KPD", color: "#a87cd4", vote: 12.32, regionOnly: null }, // Communist Party
+      { id: "zentrum", name: "Zentrum", color: "#000000", vote: 11.25, regionOnly: null }, // Catholic Centre Party
+      { id: "dnvp", name: "DNVP", color: "#1e73be", vote: 8.34, regionOnly: null }, // German National People's Party
+      { id: "bvp", name: "BVP", color: "#0dafc8", vote: 2.73, regionOnly: "bavaria" }, // Bavarian People's Party (바이에른 지역구 특화)
       { id: "dvp", name: "DVP", color: "#FFBF00", vote: 1.10, regionOnly: null }, // German People's Party
       { id: "csdv", name: "CSDV", color: "#00BFFF", vote: 0.98, regionOnly: null }, // Christian-Social People's Service
       { id: "dstp", name: "DStP", color: "#ADD8E6", vote: 0.85, regionOnly: null }, // German State Party
