--- a/index.html
+++ b/index.html
@@ -408,10 +408,10 @@ const districts = [
   { id: 18, name: "라이프치히", seats: 13 }, /* 18. Leipzig */
   { id: 19, name: "드레스덴-바우첸", seats: 19 }, /* 19. Dresden-Bautzen */
   { id: 20, name: "켐니츠-츠비카우", seats: 17 }, /* 20. Chemnitz-Zwickau */
-  { id: 21, name: "상부 바이에른 - 슈바벤", seats: 19 }, /* 21. Upper Bavaria-Swabia */
-  { id: 22, name: "하부 바이에른 - 상부 팔츠", seats: 9 }, /* 22. Lower Bavaria-Upper Palatinate */
-  { id: 23, name: "프랑켄", seats: 24 }, /* 23. Franconia */
-  { id: 24, name: "팔츠", seats: 8 }, /* 24. Palatinate */
+  { id: 21, name: "상부 바이에른 - 슈바벤 (bavaria)", seats: 19 }, /* 21. Upper Bavaria-Swabia */
+  { id: 22, name: "하부 바이에른 - 상부 팔츠 (bavaria)", seats: 9 }, /* 22. Lower Bavaria-Upper Palatinate */
+  { id: 23, name: "프랑켄 (bavaria)", seats: 24 }, /* 23. Franconia */
+  { id: 24, name: "팔츠 (bavaria)", seats: 8 }, /* 24. Palatinate */
   { id: 25, name: "뷔르템베르크", seats: 24 }, /* 25. Württemberg */
   { id: 26, name: "바덴", seats: 21 }, /* 26. Baden */
   { id: 27, name: "쾰른-아헨", seats: 19 }, /* 27. Cologne-Aachen */
