--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         width: 100%;
         height: 100%;
         /* 1933 독일 선거 지도 이미지로 변경 */
-        background-image: url('https://upload.wikimedia.org/wikipedia/commons/e/eb/Wahl_zum_Reichstag_1932-11.png'); /* 1933년 선거 지도는 1932년 11월 선거와 동일한 이미지 사용 */
+        background-image: url('https://th-thumbnailer.cdn-si-edu.com/jyC91tmHXACMxuak4crDzFeYGSI=/fit-in/1200x0/https://tf-cmsv2-smithsonianmag-media.s3.amazonaws.com/filer/5a/cf/5acf1c49-c598-40f7-8f35-8d282a43536e/reichstagsbrand-web.jpg'); /* 1933년 선거 지도는 1932년 11월 선거와 동일한 이미지 사용 */
         background-size: cover;
         background-repeat: no-repeat;
         background-position: center center;
