--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>1933년 독일 총선 시뮬레이터</title>
+    <title>1933, 체제를 돌러보다</title>
 
     <!-- Tailwind CSS for basic structure -->
     <script src="https://cdn.tailwindcss.com"></script>
@@ -196,7 +196,7 @@
 <body>
     <div class="background-image-blur"></div>
     <div class="content-wrapper">
-        <h2>🗳️ 1933년 독일 총선 시뮬레이터</h2>
+        <h2>🗳️ 1933, 체제를 돌러보다</h2>
 
         <div class="party-grid" id="partyGrid">
             <!-- Party input cards will be rendered here by JS -->
